force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Object used to track and manage payment gateway errors and system exceptions within the QuickBridge integration platform.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>