force-app/main/default/objects/Error_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Account_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>