force-app/main/default/objects/Error_Log__c/fields/Action_Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Action_Source_Object__c</fullName>
    <label>Action Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>