force-app/main/default/objects/Error_Log__c/fields/Action_Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Action_Source_Record_Id__c</fullName>
    <label>Action Source Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>