force-app/main/default/objects/Error_Log__c/fields/Carrier_Package__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Package</label>
    <referenceTo>Carrier_Package__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Carrier_Package_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>