force-app/main/default/objects/Error_Log__c/fields/Carrier_Rate_Quote__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Rate_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Rate Quote</label>
    <referenceTo>Carrier_Rate_Quote__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Carrier_Rate_Quote_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>