force-app/main/default/objects/Error_Log__c/fields/Carrier_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Shipment</label>
    <referenceTo>Carrier_Shipment__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Carrier_Shipment_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>