force-app/main/default/objects/Error_Log__c/fields/Carrier_Tracking_Event__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Tracking_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Tracking Event</label>
    <referenceTo>Carrier_Tracking_Event__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Carrier_Tracking_Event_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>