force-app/main/default/objects/Error_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Case_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>