force-app/main/default/objects/Error_Log__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo</label>
    <referenceTo>Credit_Memo__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Credit_Memo_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>