force-app/main/default/objects/Error_Log__c/fields/Dml_Operation__c.field-meta.xml
<CustomField>
    <fullName>Dml_Operation__c</fullName>
    <label>DML Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>