force-app/main/default/objects/Error_Log__c/fields/Gateway_Name__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Name__c</fullName>
    <label>Gateway Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Authorize.Net</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>QuickBooks</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>