force-app/main/default/objects/Error_Log__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Invoice_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>