force-app/main/default/objects/Error_Log__c/fields/Is_Retryable__c.field-meta.xml
<CustomField>
    <fullName>Is_Retryable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retryable</label>
    <type>Checkbox</type>
</CustomField>