force-app/main/default/objects/Error_Log__c/fields/Item_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Item_Sales_Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Sales Tax</label>
    <referenceTo>Item_Sales_Tax__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Item_Sales_Tax_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>