force-app/main/default/objects/Error_Log__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Order_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>