force-app/main/default/objects/Error_Log__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Order_Item_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>