force-app/main/default/objects/Error_Log__c/fields/Portal_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Portal_Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Payment Transaction</label>
    <referenceTo>Portal_Payment_Transaction__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Payment_Transaction_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>