force-app/main/default/objects/Error_Log__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Product_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>