force-app/main/default/objects/Error_Log__c/fields/Retry_History_Notes__c.field-meta.xml
<CustomField>
    <fullName>Retry_History_Notes__c</fullName>
    <label>Retry History Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>