force-app/main/default/objects/Error_Log__c/fields/Retry_Status__c.field-meta.xml
<CustomField>
    <fullName>Retry_Status__c</fullName>
    <label>Retry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Retrying</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>