force-app/main/default/objects/Error_Log__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Shipment_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>