force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gateway_Name__c</columns>
    <columns>Error_Category__c</columns>
    <columns>Class_Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>